Change admin pw

--- a/modules/edgetoinfluxdb/Dockerfile
+++ b/modules/edgetoinfluxdb/Dockerfile
@@ -7,9 +7,9 @@ RUN npm install node-red-contrib-influxdb
 RUN npm install node-red-contrib-azure-iot-edge-kpm
 
 # Copy Node-RED project files into place
-COPY settings.js ./settings.js
-COPY flows_cred.json ./flows_cred.json
-COPY flows.json ./flows.json
+COPY settings.js /data/settings.js
+COPY flows_cred.json /data/flows_cred.json
+COPY flows.json /data/flows.json
 
 EXPOSE 1880/tcp
 
